ont-api: major changes in transforms related to issue #57, fix and add tests, other minor changes in utils and base components